@@ -124,6 +124,12 @@ TF_MENU_FILE_OPEN=&Open...
 
 TF_MENU_FILE_IMPORT=&Import Source Files...
 
+TF_MENU_WIKI_IMPORT=&Import From MediaWiki...
+
+TF_WIKI_IMPORT_TITLE=Import From MediaWiki...
+
+TF_WIKI_IMPORT_PROMPT=Please type or paste the URL of the mediawiki page
+
 MAIN_ERROR_File_Import_Failed=File Import Failed
 
 TF_MENU_PROJECT_RELOAD=&Reload
